# erc-migration

./: .gitignore  config.ini  main.py  pyproject.toml
lib/: addressfile.py  buildingsfile.py  datatypes.py  detailsfile.py  errormessage.py  exceptions.py  filledresultfile.py  gvsipuchange.py  heatingcorrections.py  helpers.py  osvfile.py  reaccural.py  resultfile.py  tariffs.py
results/: __init__.py  accounts.py  calculations.py  filledworkbook.py  people.py  resultrow.py  workbook.py
